--- a/index.html
+++ b/index.html
@@ -41,6 +41,42 @@
         </header>
     </div>
     
+    <!-- Footer -->
+    <div class="light-blue">
+        <footer class="grid-con center-grid-con">
+            <div id="logo-foot" class="col-start-2 col-end-4 m-col-start-1 m-col-end-4">
+                <img src="images/orbitz-logo.svg" alt="Orbitz Logo">
+                <p id="m-l-copy" class="col-span-full">&copy; Orbitz 2026</p>
+            </div>
+            
+            <nav class="m-l-foot-nav m-col-start-4 m-col-end-7">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+
+            <nav class="m-l-foot-nav m-col-start-7 m-col-end-10">
+                <ul>
+                    <li><a href="#">FAQs</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms of Use</a></li>
+                    <li><a href="#">Refund Policy</a></li>
+                </ul>
+            </nav>
+
+            <div id="socials" class="col-start-2 col-end-4 m-col-start-10 m-col-end-13">
+                <h2 id="follow-us">Follow Us</h2>
+                <img id="facebook" src="images/icon-social-face.svg" alt="Facebook Icon">
+                <img id="instagram" src="images/icon-social-insta.svg" alt="Instagram Icon">
+            </div>
+
+            <p id="copy" class="col-span-full">&copy; Orbitz 2026</p>
+        </footer>
+    </div>
+
     <script src="js/main.js"></script>
 </body>
 </html>
