--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://use.typekit.net/biw6jax.css">
-
-    <title>Orbitz - Home</title>
+    <title>Home - Orbitz</title>
 </head>
 <body>
-    <h1 class="visually-hidden">Orbitz - Home</h1>
+    <h1 class="visually-hidden">Orbitz Homepage</h1>
 
     <!-- Header -->
     <div class="light-blue">
@@ -40,6 +39,52 @@
             </nav>
         </header>
     </div>
+
+    <!-- Hero -->
+    <div class="grid-con center-grid-con">
+        <div class="box col-span-full">
+            Hero
+        </div>
+    </div>
+
+    <!-- What's New -->
+    <div id="whats-new" class="grid-con center-grid-con">
+        <h2 class="col-span-full">What's New</h2>
+            <div class="box col-span-full m-col-start-6 m-col-end-13">Image</div>
+            <p class="col-span-full m-col-start-1 m-col-end-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro pariatur expedita consectetur nulla optio dolorum voluptatibus aspernatur suscipit, iusto esse rerum architecto laboriosam aliquid harum fugit exercitationem autem modi facere.</p>
+            <div class="box col-span-full m-col-start-4 m-col-end-10">Button</div>
+    </div>
+
+    <!-- Products -->
+    <div class="grid-con center-grid-con">
+        <h2 class="col-span-full">Our Products</h2>
+            <div class="box col-span-2 m-col-span-4 l-col-span-3">Product</div>
+            <div class="box col-span-2 m-col-span-4 l-col-span-3">Product</div>
+            <div class="box m-col-span-4 l-col-span-3" id="product3">Product</div>
+            <div class="box l-col-span-3" id="product4">Product</div>
+            <div class="box col-span-full m-col-start-4 m-col-end-10">Button</div>
+    </div>
+
+    <!-- Video Ad -->
+    <div class="grid-con center-grid-con">
+        <div class=" box col-span-full">Video</div>
+    </div>
+
+    <!-- About Us -->
+    <div class="grid-con center-grid-con">
+        <h2 class="col-span-full">About Us</h2>
+        <p class="col-span-full">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolorum quia ullam esse nam a labore possimus aspernatur, reiciendis doloremque facilis modi, dolorem nobis. Totam placeat architecto consequuntur aperiam odit.</p>
+        <div class="box col-span-full m-col-start-4 m-col-end-10">Button</div>
+    </div>
+
+    <!-- Find Us in Stores -->
+    <div class="grid-con center-grid-con">
+        <h2 class="col-span-full">Find Us in Stores</h2>
+        <div class="box col-span-full m-col-span-6 l-col-span-3">Location</div>
+        <div class="box col-span-full m-col-span-6 l-col-span-3">Location</div>
+        <div class="box col-span-full m-col-span-6 l-col-span-3">Location</div>
+        <div class="box col-span-full m-col-span-6 l-col-span-3">Location</div>
+    </div>
     
     <!-- Footer -->
     <div class="light-blue">
@@ -53,7 +98,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Products</a></li>
+                    <li><a href="products.html">Products</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
