Add Products Page
Add products page markup and basic styling rules for product card.

--- a/products.html
+++ b/products.html
@@ -5,10 +5,142 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/main.css">
-    <title>Orbitz - Products</title>
+    <link rel="stylesheet" href="https://use.typekit.net/biw6jax.css">
+    <title>Products - Orbitz</title>
 </head>
 <body>
-    
+    <h1 class="visually-hidden">Orbiz Products Page</h1>
+    <!-- Header -->
+    <div class="light-blue">
+        <header class="grid-con center-grid-con">
+
+            <div id="burger-btn" class="col-span-1">
+                <img src="images/icon-burger.svg" alt="Hamburger Menu">
+            </div>
+
+            <div id="logo-head" class="col-start-2 col-end-4 m-col-span-3">
+                <img src="images/orbitz-logo.svg" alt="Orbitz Logo">
+            </div>
+
+            <div id="header-icons" class="col-span-1 m-col-start-11 m-col-end-13">
+                <img id="search" src="images/icon-header-search.svg" alt="Search Icon">
+                <img id="cart" src="images/icon-header-cart.svg" alt="Shopping Cart Icon">
+            </div>
+
+            <nav id="main-nav" class="col-span-full m-col-start-4 m-col-end-11">
+                <h2 class="visually-hidden">Main Navigation</h2>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+    </div>
+
+    <!-- Hero -->
+    <div class="grid-con center-grid-con">
+        <div class="box col-span-full">
+            Hero
+        </div>
+    </div>
+
+    <!-- Our Products -->
+    <div class="grid-con center-grid-con">
+        <h2 class="col-span-full">Our Products</h2>
+        <p class="col-span-full">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque quos iste dignissimos
+            autem porro ipsum mollitia, ut quidem quibusdam asperiores sapiente incidunt perspiciatis unde accusamus
+            totam suscipit doloremque consequatur cupiditate?</p>
+
+        <div class="product-card col-span-full m-col-span-6 l-col-span-4">
+            <div class="box">Image</div>
+            <h3>Product 1</h3>
+
+            <p class="product-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <div class="button-v1">Add to Cart</div>
+        </div>
+
+        <div class="product-card col-span-full m-col-span-6 l-col-span-4">
+            <div class="box">Image</div>
+            <h3>Product 2</h3>
+
+            <p class="product-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <div class="button-v1">Add to Cart</div>
+        </div>
+
+        <div class="product-card col-span-full m-col-span-6 l-col-span-4">
+            <div class="box">Image</div>
+            <h3>Product 3</h3>
+
+            <p class="product-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <div class="button-v1">Add to Cart</div>
+        </div>
+
+        <div class="product-card col-span-full m-col-span-6 l-col-span-4">
+            <div class="box">Image</div>
+            <h3>Product 4</h3>
+
+            <p class="product-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <div class="button-v1">Add to Cart</div>
+        </div>
+
+        <div class="product-card col-span-full m-col-span-6 l-col-span-4">
+            <div class="box">Image</div>
+            <h3>Product 5</h3>
+
+            <p class="product-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <div class="button-v1">Add to Cart</div>
+        </div>
+
+    </div>
+
+    <!-- Multi Pack Offer -->
+    <div class="grid-con center-grid-con">
+        <div class="box col-span-full">Image</div>
+        <h2 class="col-span-full">Multi-Pack Offer</h2>
+        <p class="col-span-full">Lorem ipsum dolor sit, amet consectetur adipisicing elit. A, voluptates error earum
+            ducimus ipsam ad fugiat corrupti iure rem modi fuga?</p>
+        <div class="box col-span-2 m-col-start-2 m-col-end-6">Button</div>
+        <div class="box col-span-2 m-col-start-8 m-col-end-12">Button</div>
+    </div>
+
+    <!-- Footer -->
+    <div class="light-blue">
+        <footer class="grid-con center-grid-con">
+            <div id="logo-foot" class="col-start-2 col-end-4 m-col-start-1 m-col-end-4">
+                <img src="images/orbitz-logo.svg" alt="Orbitz Logo">
+                <p id="m-l-copy" class="col-span-full">&copy; Orbitz 2026</p>
+            </div>
+
+            <nav class="m-l-foot-nav m-col-start-4 m-col-end-7">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+
+            <nav class="m-l-foot-nav m-col-start-7 m-col-end-10">
+                <ul>
+                    <li><a href="#">FAQs</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms of Use</a></li>
+                    <li><a href="#">Refund Policy</a></li>
+                </ul>
+            </nav>
+
+            <div id="socials" class="col-start-2 col-end-4 m-col-start-10 m-col-end-13">
+                <h2 id="follow-us">Follow Us</h2>
+                <img id="facebook" src="images/icon-social-face.svg" alt="Facebook Icon">
+                <img id="instagram" src="images/icon-social-insta.svg" alt="Instagram Icon">
+            </div>
+
+            <p id="copy" class="col-span-full">&copy; Orbitz 2026</p>
+        </footer>
+    </div>
+
     <script src="js/main.js"></script>
 </body>
 </html>
