Update Homepage Markup
Update markup of the homepage to include updated layout and copy.

--- a/index.html
+++ b/index.html
@@ -42,49 +42,54 @@
 
     <!-- Hero -->
     <div class="grid-con center-grid-con">
-        <div class="box col-span-full">
-            Hero
-        </div>
+        <div class="box col-span-full">Hero</div>
     </div>
 
     <!-- What's New -->
-    <div id="whats-new" class="grid-con center-grid-con">
+    <section id="whats-new" class="grid-con center-grid-con">
         <h2 class="col-span-full">What's New</h2>
-            <div class="box col-span-full m-col-start-6 m-col-end-13">Image</div>
-            <p class="col-span-full m-col-start-1 m-col-end-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro pariatur expedita consectetur nulla optio dolorum voluptatibus aspernatur suscipit, iusto esse rerum architecto laboriosam aliquid harum fugit exercitationem autem modi facere.</p>
-            <div class="box col-span-full m-col-start-4 m-col-end-10">Button</div>
-    </div>
+        <div class="placeholder-img box col-span-full m-col-start-7 m-col-end-13">Image</div>
+        <div id="whats-new-content" class="col-span-full m-col-start-1 m-col-end-7">
+            <p>Get ready to try Orbitz Grape, our brand new flavour. This bright purple drink is completely smooth and super fun to enjoy. We gave it a sweet taste that reminds you of real fruit. It is a simple and delicious new way to drink grape.</p>
+            <div class="box">View Flavour</div>
+        </div>
+    </section>
 
     <!-- Products -->
-    <div class="grid-con center-grid-con">
-        <h2 class="col-span-full">Our Products</h2>
-            <div class="box col-span-2 m-col-span-4 l-col-span-3">Product</div>
-            <div class="box col-span-2 m-col-span-4 l-col-span-3">Product</div>
-            <div class="box m-col-span-4 l-col-span-3" id="product3">Product</div>
-            <div class="box l-col-span-3" id="product4">Product</div>
-            <div class="box col-span-full m-col-start-4 m-col-end-10">Button</div>
+    <div class="light-blue-section">
+        <section class="grid-con center-grid-con">
+            <h2 class="col-span-full">Our Products</h2>
+                <div class="box col-span-2 m-col-span-4 l-col-span-3">Product</div>
+                <div class="box col-span-2 m-col-span-4 l-col-span-3">Product</div>
+                <div class="box m-col-span-4 l-col-span-3" id="product3">Product</div>
+                <div class="box l-col-span-3" id="product4">Product</div>
+                <div class="box col-span-full m-col-start-4 m-col-end-10">Explore More</div>
+        </section>
     </div>
 
     <!-- Video Ad -->
     <div class="grid-con center-grid-con">
-        <div class=" box col-span-full">Video</div>
+        <h2 class="col-span-full">Our Latest Video</h2>
+        <div class=" box col-span-full m-col-start-2 m-col-end-12">Video</div>
     </div>
 
     <!-- About Us -->
-    <div class="grid-con center-grid-con">
-        <h2 class="col-span-full">About Us</h2>
-        <p class="col-span-full">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolorum quia ullam esse nam a labore possimus aspernatur, reiciendis doloremque facilis modi, dolorem nobis. Totam placeat architecto consequuntur aperiam odit.</p>
-        <div class="box col-span-full m-col-start-4 m-col-end-10">Button</div>
-    </div>
+    <section id="about-us" class="light-blue-section">
+        <div class="grid-con center-grid-con">
+            <h2 class="col-span-full">About Us</h2>
+            <p class="col-span-full m-col-start-2 m-col-end-12">The big idea behind Orbitz is very simple. We love asking questions and figuring out how things work. That curiosity helped us build a drink that looks super clean and tastes incredibly delicious. We want you to feel that same excitement when you learn about science. To help make that happen, we team up with SpaceKids Global. They run amazing programs that teach kids how to explore the galaxy and understand space travel. We mix the drinks, and they help you reach the stars. Together, we hope to inspire the next generation of astronauts and scientists.</p>
+            <div class="box col-span-full m-col-start-4 m-col-end-10">Learn More</div>
+        </div>
+    </section>
 
     <!-- Find Us in Stores -->
-    <div class="grid-con center-grid-con">
+    <section id="find-us" class="grid-con center-grid-con">
         <h2 class="col-span-full">Find Us in Stores</h2>
         <div class="box col-span-full m-col-span-6 l-col-span-3">Location</div>
         <div class="box col-span-full m-col-span-6 l-col-span-3">Location</div>
         <div class="box col-span-full m-col-span-6 l-col-span-3">Location</div>
         <div class="box col-span-full m-col-span-6 l-col-span-3">Location</div>
-    </div>
+    </section>
     
     <!-- Footer -->
     <div class="light-blue">
@@ -121,7 +126,6 @@
             <p id="copy" class="col-span-full">&copy; Orbitz 2026</p>
         </footer>
     </div>
-
     <script src="js/main.js"></script>
 </body>
 </html>
