--- a/products.html
+++ b/products.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://use.typekit.net/biw6jax.css">
-    <title>Products - Orbitz</title>
+    <title>Orbitz - Products</title>
 </head>
 <body>
     <h1 class="visually-hidden">Orbiz Products Page</h1>
+    
     <!-- Header -->
     <div class="light-blue">
         <header class="grid-con center-grid-con">
@@ -47,63 +48,68 @@
     </div>
 
     <!-- Our Products -->
-    <div class="grid-con center-grid-con">
+    <section class="grid-con center-grid-con">
         <h2 class="col-span-full">Our Products</h2>
-        <p class="col-span-full">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque quos iste dignissimos
-            autem porro ipsum mollitia, ut quidem quibusdam asperiores sapiente incidunt perspiciatis unde accusamus
-            totam suscipit doloremque consequatur cupiditate?</p>
+        <p class="col-span-full">Finding your favourite drink should be fun and easy. We built our new lineup using bright colours and clean, sweet flavours. Take a look at the bottles below and pick the perfect match for your quiet moments.</p>
 
         <div class="product-card col-span-full m-col-span-6 l-col-span-4">
             <div class="box">Image</div>
-            <h3>Product 1</h3>
+            <h3>Flavour 1</h3>
 
-            <p class="product-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-            <div class="button-v1">Add to Cart</div>
+            <p class="product-text">Description of the flavour.</p>
+            <div class="button-v1">View Details</div>
         </div>
 
         <div class="product-card col-span-full m-col-span-6 l-col-span-4">
             <div class="box">Image</div>
-            <h3>Product 2</h3>
+            <h3>Flavour 2</h3>
 
-            <p class="product-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-            <div class="button-v1">Add to Cart</div>
+            <p class="product-text">Description of the flavour.</p>
+            <div class="button-v1">View Details</div>
         </div>
 
         <div class="product-card col-span-full m-col-span-6 l-col-span-4">
             <div class="box">Image</div>
-            <h3>Product 3</h3>
+            <h3>Flavour 3</h3>
 
-            <p class="product-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-            <div class="button-v1">Add to Cart</div>
+            <p class="product-text">Description of the flavour.</p>
+            <div class="button-v1">View Details</div>
         </div>
 
         <div class="product-card col-span-full m-col-span-6 l-col-span-4">
             <div class="box">Image</div>
-            <h3>Product 4</h3>
+            <h3>Flavour 4</h3>
 
-            <p class="product-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-            <div class="button-v1">Add to Cart</div>
+            <p class="product-text">Description of the flavour.</p>
+            <div class="button-v1">View Details</div>
         </div>
 
         <div class="product-card col-span-full m-col-span-6 l-col-span-4">
             <div class="box">Image</div>
-            <h3>Product 5</h3>
+            <h3>Flavour 5</h3>
 
-            <p class="product-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-            <div class="button-v1">Add to Cart</div>
+            <p class="product-text">Description of the flavour.</p>
+            <div class="button-v1">View Details</div>
         </div>
-
-    </div>
+    </section>
 
     <!-- Multi Pack Offer -->
-    <div class="grid-con center-grid-con">
-        <div class="box col-span-full">Image</div>
-        <h2 class="col-span-full">Multi-Pack Offer</h2>
-        <p class="col-span-full">Lorem ipsum dolor sit, amet consectetur adipisicing elit. A, voluptates error earum
-            ducimus ipsam ad fugiat corrupti iure rem modi fuga?</p>
-        <div class="box col-span-2 m-col-start-2 m-col-end-6">Button</div>
-        <div class="box col-span-2 m-col-start-8 m-col-end-12">Button</div>
+    <div class="light-blue-section">
+        <section class="grid-con center-grid-con">
+            <h2 class="col-span-full">Multi-Pack Offer</h2>
+            <p class="col-span-full m-col-start-2 m-col-end-12">Sometimes you need more than just one drink for a big day. That is why we let you pick any three bottles to build your very own pack. You can try our grape, our orange, and our watermelon all at once. If you only want grape, you can easily put three of them in your box instead. You get to make all the choices here. Pick the three delicious flavours you want the most and we will send them right to you.</p>
+            <div class="box col-span-full m-col-start-4 m-col-end-10">Pick Flavours</div>
+        </section>
     </div>
+
+    <!-- Find Us in Stores -->
+    <section id="find-us" class="grid-con center-grid-con">
+        <h2 class="col-span-full">Find Us in Stores</h2>
+        <div class="box col-span-full m-col-span-6 l-col-span-3">Location</div>
+        <div class="box col-span-full m-col-span-6 l-col-span-3">Location</div>
+        <div class="box col-span-full m-col-span-6 l-col-span-3">Location</div>
+        <div class="box col-span-full m-col-span-6 l-col-span-3">Location</div>
+    </section>
 
     <!-- Footer -->
     <div class="light-blue">
