Fix Layout & Styling
Fix the layout of Home page "What's New" section and fixed overall styling rules and added rules for blue sections found throughout the pages.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- What's New -->
     <section id="whats-new" class="grid-con center-grid-con">
         <h2 class="col-span-full">What's New</h2>
-        <div class="placeholder-img box col-span-full m-col-start-7 m-col-end-13">Image</div>
+        <div class="box col-span-full m-col-start-7 m-col-end-13">Image</div>
         <div id="whats-new-content" class="col-span-full m-col-start-1 m-col-end-7">
             <p>Get ready to try Orbitz Grape, our brand new flavour. This bright purple drink is completely smooth and super fun to enjoy. We gave it a sweet taste that reminds you of real fruit. It is a simple and delicious new way to drink grape.</p>
             <div class="box">View Flavour</div>
