--- a/products.html
+++ b/products.html
@@ -57,7 +57,7 @@
             <h3>Flavour 1</h3>
 
             <p class="product-text">Description of the flavour.</p>
-            <div class="button-v1">View Details</div>
+            <div class="box">View Details</div>
         </div>
 
         <div class="product-card col-span-full m-col-span-6 l-col-span-4">
@@ -65,7 +65,7 @@
             <h3>Flavour 2</h3>
 
             <p class="product-text">Description of the flavour.</p>
-            <div class="button-v1">View Details</div>
+            <div class="box">View Details</div>
         </div>
 
         <div class="product-card col-span-full m-col-span-6 l-col-span-4">
@@ -73,7 +73,7 @@
             <h3>Flavour 3</h3>
 
             <p class="product-text">Description of the flavour.</p>
-            <div class="button-v1">View Details</div>
+            <div class="box">View Details</div>
         </div>
 
         <div class="product-card col-span-full m-col-span-6 l-col-span-4">
@@ -81,7 +81,7 @@
             <h3>Flavour 4</h3>
 
             <p class="product-text">Description of the flavour.</p>
-            <div class="button-v1">View Details</div>
+            <div class="box">View Details</div>
         </div>
 
         <div class="product-card col-span-full m-col-span-6 l-col-span-4">
@@ -89,7 +89,7 @@
             <h3>Flavour 5</h3>
 
             <p class="product-text">Description of the flavour.</p>
-            <div class="button-v1">View Details</div>
+            <div class="box">View Details</div>
         </div>
     </section>
 
