--- a/products.html
+++ b/products.html
@@ -50,7 +50,7 @@
     <!-- Our Products -->
     <section class="grid-con center-grid-con">
         <h2 class="col-span-full">Our Products</h2>
-        <p class="col-span-full">Finding your favourite drink should be fun and easy. We built our new lineup using bright colours and clean, sweet flavours. Take a look at the bottles below and pick the perfect match for your quiet moments.</p>
+        <p class="col-span-full">You need a drink that moves as fast as you do. We built this lineup with bright colours and huge flavours for kids who never want to stop. Do not settle for boring when you can have a rush of fun. Find the exact bottle below to power up your day.</p>
 
         <div class="product-card col-span-full m-col-span-6 l-col-span-4">
             <div class="box">Image</div>
@@ -97,7 +97,7 @@
     <div class="light-blue-section">
         <section class="grid-con center-grid-con">
             <h2 class="col-span-full">Multi-Pack Offer</h2>
-            <p class="col-span-full m-col-start-2 m-col-end-12">Sometimes you need more than just one drink for a big day. That is why we let you pick any three bottles to build your very own pack. You can try our grape, our orange, and our watermelon all at once. If you only want grape, you can easily put three of them in your box instead. You get to make all the choices here. Pick the three delicious flavours you want the most and we will send them right to you.</p>
+            <p class="col-span-full m-col-start-2 m-col-end-12">Big days need more than just one drink to keep you moving. That is why we let you grab any three bottles to build your ultimate pack. You can mix our grape, our orange, and our watermelon all at once. If you only want grape, you can easily stack three of them in your box instead. You make all the fun rules right here. Pick the three flavours you want the most and we will send them right to you.</p>
             <div class="box col-span-full m-col-start-4 m-col-end-10">Pick Flavours</div>
         </section>
     </div>
